apps/locust/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: locust
  annotations:
    gethomepage.dev/href: "https://locust.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: DevBench
    # gethomepage.dev/icon: https://locust.io/docs/img/touca_logo_bg.png
    gethomepage.dev/app: locust # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Locust
    gethomepage.dev/pod-selector: "app=locust"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`locust.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: locust
          port: 8089
      middlewares:
        - name: mgd-devbench-https
        - name: mgd-devbench-ratelimit
        - name: mgd-devbench-headervalidation
  tls:
    secretName: locust-tls
